--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <a class="nav-link w-nav-link" data-bs-target=".navbar-collapse.show" href="#portfolio">Portfolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link-copy w-nav-link" data-bs-target=".navbar-collapse.show" href="#contact">Email me</a>
+                            <a class="nav-link-copy w-nav-link" data-bs-target=".navbar-collapse.show" href="#contact">Get in Touch</a>
                         </li>
                     </ul>
                 </div>
@@ -88,11 +88,30 @@
 
     <!-- a propos de moi section -->
     <section id="about" class="section about-me space-b-section">
-        <div class="container center"><h2 class="section-title">About me</h2>
-            <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
-                elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero
-                vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus
-                tristique posuere.</p>
+        <div class="container center">
+            <h1 class="section-title"> Who Am I?</h1>
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-6">
+                    <h2 class="section-title">&lt;About Me/&gt;</h2>
+                   <p class="paragraph"> Greetings, thank you for visiting my website. I am Aminatou BARRY, I am a  <b>Developer</b> and  <b>DevOps Junior</b>.
+                       I enjoy learning new things, my current challenge is to become a <b>DevOps Engineer</b>.
+                       I like to code, in my previous job at  <b>Orange</b> company, my manager qualified me as <b>"Good appetite for coding"</b>.
+                       I am also a mum, I like playing Mario Kart with my Kid. I like listening audiobooks, my current favorite is
+                       <b>"Fils des Brumes"</b> of  <b>Brandon Sanderson</b>. I do fitness every week, going to movie theater,
+                       and eat a good meal at a restaurant with family or friends.
+
+                   </p>
+                    <img class="" src="assets/img/hobby.png" alt="img_about"/>
+                </div>
+                <div class="col-6 col-md-3">
+                    <img class="img_about" src="assets/img/about.jpg" alt="img_about"/>
+                    <p class="paragraph ">Today I am <span class="change-text">Dev Lead at CNAV.</span> <br>
+                        I work on two project <b>DSN</b> and <b>PASRAU</b>, my delivery are available <a href="https://www.net-entreprises.fr/">here</a>
+                        <a href="mailto:aminatou.barry97@gmail.com" class="  btn_about">Email me</a></p>
+                </div>
+            </div>
+
+
 
         </div>
     </section>
@@ -102,8 +121,8 @@
     <section id="skills" class="skills section section-bg ">
         <div class="container container2">
 
-            <h2 class="section-title">Skills</h2>
-            <p class="paragraph">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+            <h1 class="section-title">Skills</h1>
+            <p class="paragraph">My skills continue to grow, I keep learning on platform like Udemy, ORSYS, OpenClassRoom.</p>
 
             <div class="row skills-content">
 
@@ -117,9 +136,9 @@
                     </div>
 
                     <div class="progress">
-                        <span class="skill">CSS <i class="val">90%</i></span>
+                        <span class="skill">CSS <i class="val">50%</i></span>
                         <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="50" style="width: 50%;"></div>
                         </div>
                     </div>
 
@@ -129,29 +148,40 @@
                             <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div>
                         </div>
                     </div>
-
+                    <div class="progress">
+                        <span class="skill">Docker <i class="val">50%</i></span>
+                        <div class="progress-bar-wrap">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="50" style="width: 50%;"></div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="col-lg-6 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
 
                     <div class="progress">
-                        <span class="skill">PHP <i class="val">80%</i></span>
+                        <span class="skill">PHP/Synfony <i class="val">80%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
                         </div>
                     </div>
 
                     <div class="progress">
-                        <span class="skill">WordPress/CMS <i class="val">90%</i></span>
+                        <span class="skill">JAVA /Spring Boot <i class="val">80%</i></span>
                         <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="80" style="width: 80%;"></div>
                         </div>
                     </div>
 
                     <div class="progress">
-                        <span class="skill">Photoshop <i class="val">55%</i></span>
+                        <span class="skill">Mysql/MongoDB <i class="val">90%</i></span>
                         <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 55%;"></div>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="90" style="width: 90%;"></div>
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <span class="skill">DevOps : Terraform, aws Services, Azure AD B2C <i class="val">35%</i></span>
+                        <div class="progress-bar-wrap">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="50" style="width: 35%;"></div>
                         </div>
                     </div>
 
@@ -167,7 +197,7 @@
     <section id="resume" class="space-b-section section resume">
         <div class="container container2">
 
-            <h2 class="section-title">Resume</h2>
+            <h1 class="section-title">Resume</h1>
             <p class="paragraph">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 
             <div class="row">
@@ -225,7 +255,7 @@
     <div class="space-b-section">
          <section id="portfolio" class="portfolio section section-bg">
             <div class="container">
-                <h2 class="section-title">Portfolio</h2>
+                <h1 class="section-title">Portfolio</h1>
 
                 <div class="work-list" >
                     <div class="work filter-app">
