--- a/index.html
+++ b/index.html
@@ -198,35 +198,40 @@
         <div class="container container2">
 
             <h1 class="section-title">Resume</h1>
-            <p class="paragraph">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 
             <div class="row">
                 <div class="col-lg-6" data-aos="fade-up">
                     <h3 class="resume-title">Education</h3>
                     <div class="resume-item">
-                        <h4>Master of Fine Arts &amp; Graphic Design</h4>
-                        <h5>2015 - 2016</h5>
-                        <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+                        <h4>Master of MIAGE. Computer Science Applied to Business Management</h4>
+                        <h5>2019 - 2021</h5>
+                        <p><em>Orléans University, Orléans, France</em></p>
                     </div>
                     <div class="resume-item">
-                        <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-                        <h5>2010 - 2014</h5>
-                        <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+                        <h4>Bachelor of MIAGE. Computer Science Applied to Business Management</h4>
+                        <h5>2018 - 2019</h5>
+                        <p><em>Orléans University, Orléans, France</em></p>
+                    </div>
+                    <div class="resume-item">
+                        <h4>Technical degree of Computer Science. DUT</h4>
+                        <h5>2015 - 2017</h5>
+                        <p><em>IUT A of Lille, Lille, France</em></p>
                     </div>
                     <h3 class="resume-title">Professional Experience</h3>
                     <div class="resume-item">
-                        <h4>Senior graphic design specialist</h4>
-                        <h5>2019 - Present</h5>
-                        <p><em>Experion, New York, NY </em></p>
+                        <h4>Dev Lead</h4>
+                        <h5>2021 - Present</h5>
+                        <p><em>CNAV, Paris </em></p>
                         <ul>
                             <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
                             <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
                         </ul>
                     </div>
                     <div class="resume-item">
-                        <h4>Graphic design specialist</h4>
+                        <h4>Developer, Co-op student</h4>
                         <h5>2017 - 2018</h5>
-                        <p><em>Stepping Stone Advertising, New York, NY</em></p>
+
+                        <p><em>UINC, Orange France</em></p>
                         <ul>
                             <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
                             <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
@@ -378,7 +383,8 @@
 
             <div class="contact-in">
 
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2674.0539944141774!2d1.9247353999999999!3d47.9159927!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e4fb462eda3c2f%3A0xee92614ce72c3042!2s11%20Rue%20Ars%C3%A8ne%20Bourgeois%2C%2045000%20Orl%C3%A9ans!5e0!3m2!1sen!2sfr!4v1707816671874!5m2!1sen!2sfr" width="100%" height="auto" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2674.0539944141774!2d1.9247353999999999!3d47.9159927!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e4fb462eda3c2f%3A0xee92614ce72c3042!2s11%20Rue%20Ars%C3%A8ne%20Bourgeois%2C%2045000%20Orl%C3%A9ans!5e0!3m2!1sen!2sfr!4v1707816671874!5m2!1sen!2sfr" width="100%" height="auto"
+                        style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
         </div>
     </section>
@@ -396,13 +402,6 @@
 
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
     <!-- Vendor JS Files -->
-
-
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-
-    <script src="assets/vendor/typed.js/typed.umd.js"></script>
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
