--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+        <link rel="stylesheet" href="portfolio/swiper-bundle.min.css" />
+
         <!--favicon -->
         <!--css -->
         <script src="https://kit.fontawesome.com/433d1c4f2e.js" crossorigin="anonymous"></script>
@@ -96,8 +98,8 @@
                    <p class="paragraph"> Greetings, thank you for visiting my website. I am Aminatou BARRY, I am a  <b>Developer</b> and  <b>DevOps Junior</b>.
                        I enjoy learning new things, my current challenge is to become a <b>DevOps Engineer</b>.
                        I like to code, in my previous job at  <b>Orange</b> company, my manager qualified me as <b>"Good appetite for coding"</b>.
-                       I am also a mum, I like playing Mario Kart with my Kid. I like listening audiobooks, my current favorite is
-                       <b>"Fils des Brumes"</b> of  <b>Brandon Sanderson</b>. I do fitness every week, going to movie theater,
+                       I am also a mum, I like playing Mario Kart with my Kid and listening audiobooks, my current favorite is
+                       <b>"Fils des Brumes"</b> of  <b>Brandon Sanderson</b>. I do fitness every week, I like seen good movie to movie theater,
                        and eat a good meal at a restaurant with family or friends.
 
                    </p>
@@ -191,6 +193,87 @@
 
         </div>
     </section>
+
+        <!-- ===========       Certification =========-->
+
+        <div class="container-swp">
+            <div class="card-container swiper">
+                <div class="card-content">
+                    <div class="swiper-wrapper">
+                        <article class="card-article swiper-slide">
+                            <div class="card-image">
+                                <img src="assets/img/certifs/terraform.jpg" alt="card image" class="card-img">
+                                <div class="card-shadow"></div>
+                            </div>
+                            <div class="card-data">
+                                <h3 class="card-name">Terraform</h3>
+                                <p class="card-description">Terraform Beginners</p>
+                                <a href="#" class="card-button"> view more</a>
+                            </div>
+
+                        </article>
+                        <article class="card-article swiper-slide">
+                            <div class="card-image">
+                                <img src="assets/img/certifs/terraform.jpg" alt="card image" class="card-img">
+                                <div class="card-shadow"></div>
+                            </div>
+                            <div class="card-data">
+                                <h3 class="card-name">Terraform</h3>
+                                <p class="card-description">Terraform Beginners</p>
+                                <a href="#" class="card-button"> view more</a>
+                            </div>
+
+                        </article>
+                        <article class="card-article swiper-slide">
+                            <div class="card-image">
+                                <img src="assets/img/certifs/terraform.jpg" alt="card image" class="card-img">
+                                <div class="card-shadow"></div>
+                            </div>
+                            <div class="card-data">
+                                <h3 class="card-name">Terraform</h3>
+                                <p class="card-description">Terraform Beginners</p>
+                                <a href="#" class="card-button"> view more</a>
+                            </div>
+
+                        </article>
+                        <article class="card-article swiper-slide">
+                            <div class="card-image">
+                                <img src="assets/img/certifs/terraform.jpg" alt="card image" class="card-img">
+                                <div class="card-shadow"></div>
+                            </div>
+                            <div class="card-data">
+                                <h3 class="card-name">Terraform</h3>
+                                <p class="card-description">Terraform Beginners</p>
+                                <a href="#" class="card-button"> view more</a>
+                            </div>
+
+                        </article>
+                        <article class="card-article swiper-slide">
+                            <div class="card-image">
+                                <img src="assets/img/certifs/terraform.jpg" alt="card image" class="card-img">
+                                <div class="card-shadow"></div>
+                            </div>
+                            <div class="card-data">
+                                <h3 class="card-name">Terraform</h3>
+                                <p class="card-description">Terraform Beginners</p>
+                                <a href="#" class="card-button"> view more</a>
+                            </div>
+
+                        </article>
+
+                    </div>
+                </div>
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev">
+                    <i class="ri-arrow-left-s-line"></i>
+                </div>
+                <div class="swiper-button-next">
+                    <i class="ri-arrow-right-s-line"></i>
+                </div>
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+            </div>
+        </div>
     </div>
 
     <!-- Resume section -->
@@ -405,6 +488,9 @@
     <!-- Vendor JS Files -->
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <!-- Swiper JS -->
+    <script src="assets/js/swiper-bundle.min.js"></script>
+
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
