--- a/index.html
+++ b/index.html
@@ -215,48 +215,48 @@
                         </article>
                         <article class="card-article swiper-slide">
                             <div class="card-image">
-                                <img src="assets/img/certifs/terraform.jpg" alt="card image" class="card-img">
+                                <img src="assets/img/certifs/devops1.jpg" alt="card image" class="card-img">
                                 <div class="card-shadow"></div>
                             </div>
                             <div class="card-data">
-                                <h3 class="card-name">Terraform</h3>
-                                <p class="card-description">Terraform Beginners</p>
+                                <h3 class="card-name">Devops : HandBook</h3>
+                                <p class="card-description">Devops Initiation</p>
                                 <a href="#" class="card-button"> view more</a>
                             </div>
 
                         </article>
                         <article class="card-article swiper-slide">
                             <div class="card-image">
-                                <img src="assets/img/certifs/terraform.jpg" alt="card image" class="card-img">
+                                <img src="assets/img/certifs/devops2.jpg" alt="card image" class="card-img">
                                 <div class="card-shadow"></div>
                             </div>
                             <div class="card-data">
-                                <h3 class="card-name">Terraform</h3>
-                                <p class="card-description">Terraform Beginners</p>
+                                <h3 class="card-name">Devops : practice</h3>
+                                <p class="card-description">Practice Devops CI/CD with Git, Jenkins, Ansible, Kubernetes </p>
                                 <a href="#" class="card-button"> view more</a>
                             </div>
 
                         </article>
                         <article class="card-article swiper-slide">
                             <div class="card-image">
-                                <img src="assets/img/certifs/terraform.jpg" alt="card image" class="card-img">
+                                <img src="assets/img/certifs/devops3.jpg" alt="card image" class="card-img">
                                 <div class="card-shadow"></div>
                             </div>
                             <div class="card-data">
-                                <h3 class="card-name">Terraform</h3>
-                                <p class="card-description">Terraform Beginners</p>
+                                <h3 class="card-name">Devops : practice</h3>
+                                <p class="card-description">Practice Devops CI/CD with Jenkins, Maven, Gradle </p>
                                 <a href="#" class="card-button"> view more</a>
                             </div>
 
                         </article>
                         <article class="card-article swiper-slide">
                             <div class="card-image">
-                                <img src="assets/img/certifs/terraform.jpg" alt="card image" class="card-img">
+                                <img src="assets/img/certifs/devops4_aws.jpg" alt="card image" class="card-img">
                                 <div class="card-shadow"></div>
                             </div>
                             <div class="card-data">
-                                <h3 class="card-name">Terraform</h3>
-                                <p class="card-description">Terraform Beginners</p>
+                                <h3 class="card-name">Devops : practice with AWS</h3>
+                                <p class="card-description">Practice Devops CI/CD with AWS, Jenkins, Docker, Ansible Gradle </p>
                                 <a href="#" class="card-button"> view more</a>
                             </div>
 
