--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="portfolio/swiper-bundle.min.css" />
+        <link rel="stylesheet" href="css/swiper-bundle.min.css" />
 
         <!--favicon -->
         <!--css -->
         <script src="https://kit.fontawesome.com/433d1c4f2e.js" crossorigin="anonymous"></script>
 
 
-        <link rel="stylesheet" href="portfolio/amina.css">
+        <link rel="stylesheet" href="css/amina.css">
 
     </head>
     <body>
@@ -32,7 +32,7 @@
 <!--                </button>-->
                 <div class="collapse navbar-collapse" id="navbar-toggler">
                     <a class="navbar-brand w-nav-brand" href="#">
-                        <img src="img/logo.png" alt="logo" class="image">
+                        <img src="assets/img/logo.png" alt="logo" class="image">
                     </a>
                     <ul id="menu-list" class="navbar-nav d-flex justify-content-center align-items-center nav-menu w-nav-menu" >
                         <li class="nav-item">
@@ -79,7 +79,7 @@
 
             </div>
             <div class="right-block img-hero">
-                <img src="img/profile.jpg" alt="profile">
+                <img src="assets/img/profile.jpg" alt="profile">
             </div>
         </div>
         </div>
@@ -596,10 +596,10 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <!-- Swiper JS -->
-    <script src="assets/js/swiper-bundle.min.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
 
 
     <!-- Template Main JS File -->
-    <script src="assets/js/main.js"></script>
+    <script src="js/main.js"></script>
     </body>
 </html>
